added category UI logic

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NewzAppUdemy">
-        <activity android:name=".ui.HomeActivity"></activity>
+        <activity android:name=".ui.NewsListActivity"></activity>
+        <activity android:name=".ui.HomeActivity" />
         <activity android:name=".ui.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
